[package]
description = "An opinionated sql formatter, with the aim of organizing queries into columns."
edition = "2021"
homepage = "https://github.com/Gardego5/sqlformatter"
license-file = "LICENSE"
name = "sqlformatter"
readme = "README.md"
repository = "https://github.com/Gardego5/sqlformatter"
version = "0.1.0"

[dependencies]
